# dgc-platform-v1

./: CONTRIBUTING.md  Cargo.toml  Jenkinsfile  README.md  docker-compose-splinter.yaml  docker-compose.yaml
ci/: dgc-platform-dev  dgc-platform-dev.yaml
cli/: Cargo.toml  Dockerfile
cli/src/: error.rs  http.rs  main.rs  transaction.rs  yaml_parser.rs
cli/src/actions/: admin.rs  agents.rs  keygen.rs  mod.rs  organizations.rs  products.rs  schemas.rs
cli/src/splinter/: mod.rs
cli/tests/: product.rs
cli/tests/yaml/: test_product_create.yaml  test_product_update.yaml
contracts/pike/: Cargo.toml  Dockerfile  pike.yaml
contracts/pike/packaging/scar/: manifest.yaml
contracts/pike/src/: addresser.rs  error.rs  handler.rs  main.rs
contracts/product/: Cargo.toml  Dockerfile  product.yaml
contracts/product/packaging/scar/: manifest.yaml
contracts/product/src/: addressing.rs  handler.rs  main.rs  payload.rs  state.rs  validation.rs
contracts/schema/: Cargo.toml  Dockerfile  schema.yaml
contracts/schema/packaging/scar/: manifest.yaml
contracts/schema/src/: handler.rs  main.rs  payload.rs  state.rs
contracts/track_and_trace/: Cargo.toml  Dockerfile  track_and_trace.yaml
contracts/track_and_trace/packaging/scar/: manifest.yaml
contracts/track_and_trace/src/: addressing.rs  handler.rs  main.rs  payload.rs  state.rs
daemon/: Cargo.toml  Dockerfile  diesel.toml  openapi.yaml
daemon/migrations/2019-03-29-174040_create_block/: down.sql  up.sql
daemon/migrations/2019-04-04-145511_create-pike-tables/: down.sql  up.sql
daemon/migrations/2019-04-19-191743_create_grid_schema_tables/: down.sql  up.sql
daemon/migrations/2019-05-02-191951_create_tnt_tables/: down.sql  up.sql
daemon/migrations/2019-05-23-175928_create_property_view/: down.sql  up.sql
daemon/migrations/2019-12-09-214848_add_service_id_column/: down.sql  up.sql
daemon/migrations/2019-12-10-231138_update-block-schema/: down.sql  up.sql
daemon/migrations/2019-12-23-162826_splinter_compat/: down.sql  up.sql
daemon/packaging/ubuntu/: postinst
daemon/src/: config.rs  error.rs  http.rs  key.rs  main.rs  transaction.rs  yaml_parser.rs
daemon/src/actions/: admin.rs  agents.rs  database.rs  error.rs  keygen.rs  migrations.rs  mod.rs  organizations.rs  products.rs  schemas.rs
daemon/src/database/: error.rs  mod.rs  models.rs  schema.rs
daemon/src/database/helpers/: agents.rs  commits.rs  grid_schemas.rs  mod.rs  organizations.rs  products.rs  track_and_trace.rs
daemon/src/event/: db_handler.rs  error.rs  mod.rs
daemon/src/rest_api/: error.rs  mod.rs
daemon/src/rest_api/routes/: agents.rs  mod.rs  organizations.rs  products.rs  records.rs  schemas.rs
daemon/src/sawtooth/: batch_submitter.rs  connection.rs  event.rs  mod.rs
daemon/src/splinter/: batch_submitter.rs  event.rs  key.rs  mod.rs
daemon/src/splinter/app_auth_handler/: error.rs  mod.rs  node.rs  sabre.rs
daemon/test/: docker-compose.yaml
dgc-platform-ui/: .prettierignore  Dockerfile  package.json
dgc-platform-ui/configs/apache/: httpd.conf
dgc-platform-ui/docker/: docker-compose.yaml
dgc-platform-ui/docker/test/: Dockerfile
dgc-platform-ui/public/: index.html
dgc-platform-ui/saplings/product/public/: index.html
dgc-platform-ui/saplings/product/src/: App.scss  index.css  setupTests.js
dgc-platform-ui/saplings/product/test/: Dockerfile
dgc-platform-ui/saplings/profile/: package.json
dgc-platform-ui/saplings/profile/public/: index.html
dgc-platform-ui/saplings/profile/src/: App.scss  OverlayModal.js  OverlayModal.scss  index.js  useDebounce.js
dgc-platform-ui/saplings/profile/test/: Dockerfile
dgc-platform-ui/saplings/register-login/src/: index.ts  register-login.html
dgc-platform-ui/saplings/register-login/types/: index.d.ts
dgc-platform-ui/src/: App.js  index.css  setupTests.js
dgc-platform-ui/src/theme/: colors.scss  typography.scss  variables.scss
docker/: lint  tests
docker/compose/: grid_tests.yaml
docs/: Makefile  dgc-platform-build-docs
docs/source/: about.rst  app_developers_guide.rst  cli_references.rst  conf.py  contents.rst  glossary.rst  grid_sdk.rst  introduction.rst  rest_api.rst  transaction_family_specifications.rst
docs/source/_templates/: indexcontent.html
docs/source/transaction_family_specifications/: grid_schema_family_specification.rst  grid_track_and_trace_family_specification.rst  schema_family_specification.rst  track_and_trace_family_specification.rst
examples/splinter/: README.md  docker-compose.yaml
examples/splinter/configs/: key_registry_spec.yaml  nodes.yaml
grid-ui/: Dockerfile  README.md  package.json
grid-ui/docker/: docker-compose.yaml
grid-ui/docker/test/: Dockerfile
grid-ui/public/: manifest.json
grid-ui/sapling-dev-server/: Dockerfile  profile.js
grid-ui/saplings/product/: .eslintignore  .prettierignore
grid-ui/saplings/product/scripts/: build.js
grid-ui/saplings/profile/: .eslintignore
grid-ui/saplings/register-login/: jest.config.js  package.json  webpack.config.js
grid-ui/src/: App.scss  App.test.js  index.css  index.js
grid-ui/src/theme/: index.js  index.scss  sizes.scss  timings.scss
integration/: docker-compose.yaml
sdk/: Cargo.toml  build.rs
sdk/protos/: pike_payload.proto  pike_state.proto  product_payload.proto  product_state.proto  schema_payload.proto  schema_state.proto  track_and_trace_payload.proto  track_and_trace_state.proto
sdk/src/: lib.rs  permissions.rs  protos.rs
sdk/src/protocol/: errors.rs  mod.rs
sdk/src/protocol/pike/: mod.rs  state.rs
sdk/src/protocol/product/: payload.rs  state.rs
sdk/src/protocol/schema/: payload.rs  state.rs
sdk/src/protocol/track_and_trace/: mod.rs  payload.rs  state.rs
(+62 files in other folders)
