# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-platform-cli"
version = "0.1.0"
authors = ["dgc-network"]
edition = "2018"
license = "Apache-2.0"
description = """\
    dgc-platform is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "dgc-platform"
path = "src/main.rs"

[dependencies]
assert_cmd = "0.11"
clap = "2"
log = "0.4"
flexi_logger = "0.14"
sawtooth-sdk = "0.4"
sabre-sdk = "0.5"
dgc-platform-sdk = { path = "../sdk" }
rust-crypto = "0.2"
protobuf = "2"
users = "0.9"
reqwest = "0.9"
dirs = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
diesel = { version = "1.0", features = ["postgres"] }
diesel_migrations = "1.4"

[features]
default = ["sawtooth"]

stable = ["sawtooth"]

experimental = ["splinter"]

sawtooth = []
splinter = ["admin-keygen"]
admin-keygen = []
