# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-platform-daemon"
version = "0.1.0"
authors = ["dgc.network"]
edition = "2018"
license = "Apache-2.0"
description = """\
    dgc-platform is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "dgc-platform-daemon"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
base64 = "0.10"
byteorder = "1"
clap = "2"
ctrlc = "3.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "1.4"
flexi_logger = "0.14"
futures = "0.3"
grid-sdk = { path = "../sdk" }
log = "0.4"
protobuf = "2"
#reqwest = { version = "0.10.1", optional = true, features = ["json", "blocking"] }
#sabre-sdk = { version = "0.5", optional = true }
sawtooth-sdk = { version = "0.4", features = ["transact-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transact = { version = "0.2", optional = true }
url = "2.1"
uuid = { version = "0.6", features = ["v4"] }

reqwest = "0.9"
sabre-sdk = "0.5"
serde_yaml = "0.8"

[dependencies.splinter]
version = "0.3"
optional = true
features = [ "events", "scabbard-client" ]

[features]
default = ["sawtooth-support"]

stable = ["sawtooth-support"]

experimental = ["splinter-support"]

sawtooth-support = []
#splinter-support = ["splinter", "reqwest", "sabre-sdk", "transact", "transact/contract-archive"]
splinter-support = ["splinter", "transact", "transact/contract-archive"]
test-api = []

[package.metadata.deb]
maintainer = "The dgc-platform Team"
depends = "$auto"
assets = [
    ["target/release/dgc-platform-daemon", "/usr/bin/dgc-platform-daemon", "755"]
]
maintainer-scripts = "packaging/ubuntu"
