# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-platform-sdk"
version = "0.1.0"
authors = ["dgc.network"]
description = """\
    dgc-platform is a platform for building supply chain solutions \
    that include distributed ledger components. It provides a growing \
    set of tools that accelerate development for supply chain smart contracts\
    and client interfaces.
"""
homepage = "https://dgc-platform.hyperledger.org"
edition = "2018"
license = "Apache-2.0"


[dependencies]
protobuf = "2"
cfg-if = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
sabre-sdk = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-crypto = "0.2"
sawtooth-sdk = "0.4"

[build-dependencies]
protoc-rust = "2.14"
glob = "0.2"
