# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-platform-pike-tp"
version = "0.1.0"
authors = ["dgc.network"]
#edition = "2018"

[dependencies]
protobuf = "2"
cfg-if = "0.1"
hex = "0.3.1"
dgc-platform-sdk = {path = "../../sdk"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
sabre-sdk = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sawtooth-sdk = "0.3"
log = "0.4"
flexi_logger = "0.14"
clap = "2"
rust-crypto = "0.2.36"


[build-dependencies]
protoc-rust = "2"
