# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-platform-product-tp"
version = "0.1.0"
authors = ["dgc.network"]
description = "dgc-platform Product Smart Contract"
edition = "2018"

[dependencies]
clap = "2"
dgc-platform-sdk = { path = "../../sdk" }
cfg-if = "0.1"
hex = "0.3.1"
protobuf = "2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
sabre-sdk = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-crypto = "0.2.36"
sawtooth-sdk = "0.4"
rustc-serialize = "0.3.22"
log = "0.3.0"
log4rs = "0.7.0"
